test-suite/cases/schema/errors/ext-type-missing-required.eure
// Invalid: $description is required but not provided

input_eure = ```eure
name = "Alice"
```

schema = ```eure
name = `text`
name.$ext-type.description = `text`
```

schema_errors = [
  ```
error: Missing required extension 'description' at path name
 --> <input>:1:1
  |
1 | name = "Alice"
  | ^^^^^^^^^^^^^^ Missing required extension 'description' at path name
  |
note: constraint defined here
 --> <schema>:1:1
  |
1 | name = `text`
  | ------------- constraint defined here
```
]
